# iworkflow

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  USING_IWORKFLOW.md  iworkflow-explainer.html
docs/design/: dynamic-toolsets.md  supervisor.md  telemetry-and-agent-crystallization.md
examples/: build_catalog_measure.py  build_ledger.py  build_tests.py  build_toolsets.py  build_worktrees.py  codex_drives_iworkflow.sh  complex_security_audit.json  complex_spec.json  demo_brainstorm.py  demo_complex_security_audit.py  demo_dashboard.json  demo_fakes.py  demo_live.py  demo_routing.py  demo_tmux.py  fix_mcp_issues.json  implement_openspec_changes.json  measure_toolsets.py  review_client_v4.json  run_demo_dashboard.py  workflow_dynamic.py  workflow_review.py  workflow_roadmap.py
iworkflow/: __init__.py  catalog_loaders.py  cli.py  dashboard.py  graph.py  learn.py  ledger.py  mcp_server.py  minijsonschema.py  provider_models.py  providers.py  recipes.py  routing.py  scheduler.py  sessions.py  stats.py  toolsets.py  workflow.py  worktree.py
specs/: README.md  iworkflow.openspec.json  models.json
tests/: test_catalog_loaders.py  test_cli.py  test_learn.py  test_ledger.py  test_mcp_server.py  test_minijsonschema.py  test_pipeline.py  test_provider_models.py  test_providers.py  test_routing.py  test_scheduler.py  test_sessions.py  test_stats.py  test_supervisor.py  test_telemetry.py  test_toolsets.py  test_workflow.py  test_workflow_worktree_isolation.py  test_worktree.py
(+33 files in other folders)
