[project]
name = "iworkflow"
version = "0.0.1"
description = "Deterministic, subscription-only, rate-limit-aware dynamic-workflow orchestrator over coding-agent CLIs (Codex, Gemini, Claude)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pablo Muñiz Muñoz" }]
keywords = ["agents", "orchestration", "workflow", "codex", "gemini", "claude", "cli", "mcp"]
dependencies = []  # core runtime is stdlib-only by design

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
mcp = ["mcp>=1.2"]   # optional MCP face — lets Codex/agy/Claude DRIVE workflows

[project.scripts]
iworkflow = "iworkflow.cli:main"
iworkflow-mcp = "iworkflow.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iworkflow"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["examples"]   # illustrative demo scripts, linted loosely
